--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,40 @@
 {
   "name": "DTAC 2025 - District 20",
   "short_name": "DTAC 2025",
-  "start_url": "/index.html",
+  "description": "District 20 Toastmasters Annual Contest",
+  "start_url": "./",
+  "id": "./",
   "display": "standalone",
   "background_color": "#000820",
   "theme_color": "#772432",
-  "description": "District 20 Toastmasters Annual Contest",
+  "orientation": "any",
+  "scope": "./",
   "icons": [
     {
-      "src": "assets/img/favicon.png",
+      "src": "./assets/img/favicon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "assets/img/favicon.png",
+      "src": "./assets/img/favicon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "./assets/img/banner.jpg",
+      "type": "image/jpg",
+      "sizes": "1920x1080",
+      "form_factor": "wide"
+    },
+    {
+      "src": "./assets/img/banner.jpg",
+      "type": "image/jpg",
+      "sizes": "1080x1920",
+      "form_factor": "narrow"
     }
   ]
 }
