--- a/manifest.json
+++ b/manifest.json
@@ -2,22 +2,22 @@
   "name": "DTAC 2025 - District 20",
   "short_name": "DTAC 2025",
   "description": "District 20 Toastmasters Annual Contest",
-  "start_url": "./",
-  "id": "./",
+  "start_url": "/toastmasters/",
+  "id": "/toastmasters/",
   "display": "standalone",
   "background_color": "#FFFFFF",
   "theme_color": "#FFFFFF",
   "orientation": "any",
-  "scope": "./",
+  "scope": "/toastmasters/",
   "icons": [
     {
-      "src": "./assets/img/favicon-192.png",
+      "src": "/toastmasters/assets/img/favicon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "./assets/img/favicon-512.png",
+      "src": "/toastmasters/assets/img/favicon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -25,13 +25,13 @@
   ],
   "screenshots": [
     {
-      "src": "./assets/img/banner.jpg",
+      "src": "/toastmasters/assets/img/banner.jpg",
       "type": "image/jpg",
       "sizes": "1920x1080",
       "form_factor": "wide"
     },
     {
-      "src": "./assets/img/banner.jpg",
+      "src": "/toastmasters/assets/img/banner.jpg",
       "type": "image/jpg",
       "sizes": "1080x1920",
       "form_factor": "narrow"
